Use "application default" audio device as default PulseAudio device.

This reverts commit ae8806b52251815055294640dd490d401f3bf5b5 [formerly 254c78a58a9da3a320c5ce8b1d84c0843fe3b8bc] (https://codereview.chromium.org/1711823004) which changed to use the system default. That change causes problems for some use cases.

BUG=606163
TBR=tommi@chromium.org (this is a revert)

Review-Url: https://codereview.chromium.org/1992203002
Cr-Commit-Position: refs/heads/master@{#394758}

Former-commit-id: 398915beccf80d5e9632b4fa8ea4f61bbc0b4835